--- a/Signup/signup.html
+++ b/Signup/signup.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="input input_password">
                     <label for="password">Password</label>
-                    <input type="text" id="password">
+                    <input type="password" id="password">
                 </div>
                 <button class="input_button" type="button">Show</button>
             </form>
