登录页面改进

--- a/login/login.html
+++ b/login/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/login.css">
     <script defer src="./js/login.js"></script>
+    <link rel="stylesheet" href="https://at.alicdn.com/t/c/font_3852963_ll6y6wjr1f.css">
     <title>Login</title>
 </head>
 <body>
@@ -14,6 +15,7 @@
         邮箱<input type="text" placeholder="请输入邮箱" class="email">
         <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         密码<input type="password" placeholder="请输入密码" class="password">
+        <span class="iconfont icon-biyan"></span>
         <br />
         <button action="" class="btn">登录</button>
     </div>
